# YadroInternship

./: .gitignore  CMakeLists.txt  README.md
business_logic/domain/: CMakeLists.txt  ClubConfig.h  ClubResult.h  EventTime.cpp  EventTime.h  ParseData.h  Table.h  TableInfo.h
business_logic/domain/EventMaterial/: ClientArrived.h  ClientFinal.h  ClientLeft.h  ClientSatByQueue.h  ClientSatDown.h  ClientWaiting.h  ErrorEvent.h  Event.h
business_logic/domain/EventMaterial/BuildChainHandlers/: ClientArrivedHandler.h  ClientLeftEventHandler.h  ClientSatDownHandler.h  ClientWaitingHandler.h  EventHandler.h
business_logic/services/: CMakeLists.txt  ClubService.cpp  ClubService.h
infrastructure/argument_parser/: CMakeLists.txt
infrastructure/argument_parser/include/: ArgumentParser.h
infrastructure/argument_parser/src/: ArgumentParser.cpp
infrastructure/file_parser/: CMakeLists.txt
infrastructure/file_parser/include/: FileParser.h  IFileParser.h
infrastructure/file_parser/src/: FileParser.cpp
presentation/: CMakeLists.txt  main.cpp
presentation/include/: SimpleLogger.h
presentation/src/: SimpleLogger.cpp
tests/: CMakeLists.txt  ClubServiceTests.cpp
